--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:var(--body-font);
 }
 
 a {
@@ -15,4 +15,12 @@ a {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
+}
+
+:root{
+  --body-font: "Roboto", sans-serif;
+  --blue-color: #2690F4;
+  --gray-color: #F2F2F2 ;
+  --white-blue-color: #E7F3FF;
 }
