--- a/components/homePage/homePage.module.css
+++ b/components/homePage/homePage.module.css
@@ -1,5 +1,4 @@
 .landinPageAdvert {
-  background-color: #f2f2f2;
   display: flex;
   justify-content: center;
 }
@@ -12,6 +11,7 @@
 .title {
   color: black;
   text-align: center;
+  padding: 20px 0;
 }
 
 .infoPartner {
