--- a/components/product/single/single.module.css
+++ b/components/product/single/single.module.css
@@ -1,7 +1,11 @@
+.pickupInfoDetails{
+    padding-left: 250px;
+    padding-right: 250px;
+}
 .container {
     padding-left: 250px;
     padding-right: 250px;
-    margin-bottom: 150px;
+    margin-bottom: 20px;
 }
 
 .productDetails {
@@ -17,6 +21,10 @@
         padding-right: 0px;
         margin-bottom: 300px;
     } 
+    .pickupInfoDetails{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
     .pickupInfo {
         width: 90%;
     }
@@ -45,7 +53,11 @@
         padding: 0;
         margin: 0;
         margin-bottom: 10px;
-    }    
+    }  
+    .pickupInfoDetails{
+        padding-left: 0px;
+        padding-right: 0px;
+    }  
     .productDetails {
         height: 490px;
     }
