--- a/components/product/single/Details/details.module.css
+++ b/components/product/single/Details/details.module.css
@@ -1,30 +1,25 @@
 .detailsTitle {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
     font-weight: 400;
     font-size: 20px;
 }
-
 .detailsListContainer {
     width: 70%;
 }
-
 .detailsList {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 300;
-    padding: 0;
 }
-
+.detailsList p:nth-child(2) {
+    color: #000000;
+    font-weight: 600;
+}
 .detailOption {
-    padding-left: 30px;
     text-transform: capitalize;
 }
-
-@media (max-width: 440px){
+@media only screen and (min-width: 320px) and (max-width: 425px) {
     .detailsListContainer {
         width: 90%;
     }
@@ -33,5 +28,58 @@
     }
     .detailsTitle { 
         font-size: 16px;
+        font-weight: 500;
+        margin: 15px 0;
+    }
+}
+@media only screen and (min-width: 426px) and (max-width: 575px) {
+    .detailsTitle {
+        font-size: 16px;
+        font-weight: 700;
+        letter-spacing: 0.2px;
+    }
+    .detailsList {
+        padding: 1px 0;
+    }
+}
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+    .detailsTitle {
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 0.2px;
+        padding: 10px 0;
+    }
+}
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+    .detailsTitle {
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 0.2px;
+        padding: 10px 0;
+    }
+    .detailsListContainer {
+        padding: 10px 0;
+    }
+}
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+    .detailsTitle {
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 0.2px;
+        padding: 10px 0;
+    }
+    .detailsListContainer {
+        padding: 10px 0;
+    }
+}
+@media screen and (min-width: 1441px) {
+    .detailsTitle {
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 0.2px;
+        padding: 10px 0;
+    }
+    .detailsListContainer {
+        padding: 10px 0;
     }
 }
