--- a/components/product/single/Topbar/topbar.module.css
+++ b/components/product/single/Topbar/topbar.module.css
@@ -2,17 +2,16 @@
     background-color: var(--white-blue-color);
     display: flex;
     flex-direction: row;
-    height: 90px;
     border-radius: 5px;
     align-items: center;
     width: 100%;
+    padding: 10px 10px;
 }
 .backIcon {
     width: 40%;
     cursor: pointer;
 }
 .backIcon img{
-    padding: 20px;
     width: 25%;
 }
 .paymentOption{
@@ -26,20 +25,7 @@
     font-weight: 900;
     font-size: 20px;
 }
-
-@media (max-width: 688px){
-    .backIcon {
-        width: 30%;
-    }
-    .backIcon img{
-        margin-left: 10px;
-        padding: 5px;
-        width:50px;
-        height:50px;
-    }
-}
-
-@media (max-width: 440px){
+@media only screen and (min-width: 320px) and (max-width: 425px) {
     .backIcon img{
         margin-left: 10px;
         padding: 5px;
@@ -47,8 +33,111 @@
         height:30px;
     }
     .code {
-        color: var(--blue-color);
         font-weight: 400;
         font-size: 18px;
+    }
+    .backIcon {
+        width: 20%;
+    }
+    .paymentOption {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .code {
+        padding: 3px 0;   
+        font-weight: 600;
+        letter-spacing: 0.3px;
+    }
+    .dial {
+        font-size: 15px;
+        padding: 3px 0;
+    }   
+} 
+@media only screen and (min-width: 426px) and (max-width: 575px) {
+    .backIcon img {
+        width: 22px;
+        height: 22px;
+    }
+    .paymentOption {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .code {
+        font-weight: 600;
+        font-size: 18px;
+    }
+    .backIcon {
+        width: 25%;
+    }
+}
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+    .backIcon img {
+        width: 24px;
+        height: 24px;
+        margin: 0 0px 0px 20px;
+    }
+    .paymentOption {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .code {
+        font-weight: 600;
+        font-size: 20px;
+        padding: 10px 0;
+    }
+    .backIcon {
+        width: 40%;
+    }
+}
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+    .backIcon img {
+        width: 30px;
+        height: 30px;
+    }
+    .paymentOption {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .code {
+        font-weight: 600;
+        font-size: 19px;
+        padding: 10px 0;
+    }
+}
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+    .backIcon img {
+        width: 20px;
+        height: 20px;
+    }
+    .paymentOption {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .code {
+        font-weight: 600;
+        font-size: 19px;
+        padding: 10px 0;
+    }
+}
+@media screen and (min-width: 1441px) {
+    .backIcon img {
+        width: 20px;
+        height: 20px;
+    }
+    .paymentOption {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .code {
+        font-weight: 600;
+        font-size: 19px;
+        padding: 10px 0;
     }
 }
