--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,25 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap'); */
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family:var(--body-font);
+  height: 100%;
 }
-
 a {
   color: inherit;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
 }
-
 :root{
-  --body-font: "Roboto", sans-serif;
+  --body-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   --blue-color: #2690F4;
   --gray-color: #F2F2F2 ;
   --white-blue-color: #E7F3FF;
